--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,27 @@
 ### TynLog ###
 *.log
 
+### Gradle ###
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 ### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
 ### Kotlin ###
-.kotlin
+.kotlin/
 
 ### Eclipse ###
 .apt_generated
